k8s/orders-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-catalog
  template:
    metadata:
      labels:
        app: orders-catalog
    spec:
      containers:
        - image: klemen1999/orders-catalog:2022-12-03-21-21-24
          name: orders-catalog
          ports:
            - containerPort: 8081
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 120
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 120
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: orders-catalog
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: orders-catalog
