k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /order-catalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-catalog
                port:
                  number: 8081
          - path: /restaurant-catalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: restaurant-catalog
                port:
                  number: 8080
          - path: /auth-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8084
          - path: /weather-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 8082
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
